--- a/server/prisma/prisma.yml
+++ b/server/prisma/prisma.yml
@@ -1,5 +1,6 @@
 # Specifies the HTTP endpoint of your Prisma API.
-endpoint: ''
+#endpoint: ''
+endpoint: https://us1.prisma.sh/ryan-renteria-d49472/react-apollo-test/dev
 
 # Defines your models, each model is mapped to the database as a table.
 datamodel: datamodel.prisma
